# RDR2BetterMouseSensitivity

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: game_hook.hpp  helper.hpp  logger.hpp  mod_config.hpp  mod_main.hpp  renderer_hook_d3d12.hpp  renderer_hook_vulkan.hpp  user_interface.hpp
input/: version.h.in
src/: game_hook.cpp  helper.cpp  logger.cpp  main.cpp  mod_config.cpp  mod_main.cpp  renderer_hook_d3d12.cpp  renderer_hook_vulkan.cpp  user_interface.cpp
